@@ -12,7 +12,7 @@
 double const SilentEnough = log(1.0 / 32768);
 
 #define MAX_TAPS		4
-// 200 ms przy 44100 Hz
+// 200 ms at 44100 Hz
 #define MAX_DELAY   131072
 #define DELAY_MASK  131070
 
@@ -521,8 +521,6 @@ void mi::TickTrack(CTrack *pt, tvals *ptval)
 
 void mi::Tick()
 {
-	for (int c = 0; c < numTracks; c++)
-		TickTrack(&Tracks[c], &tval[c]);
   if (gval.dryamp!=paraDryAmp.NoValue)
   {
     if (gval.dryamp)
@@ -542,6 +540,8 @@ void mi::Tick()
     Cutoff=gval.cutoff;
   if (gval.resonance!=paraResonance.NoValue)
     Resonance=gval.resonance;
+  for (int c = 0; c < numTracks; c++)
+    TickTrack(&Tracks[c], &tval[c]);
 }
 
 
